// PRSYS — Prisma schema (clean, cycle-safe)
// Target: MySQL 8

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

model Roles {
  RoleID          String   @id @default(uuid())
  Name            String
  Code            String   @unique
  Description     String?
  IsSystemDefault Boolean  @default(false)
  CreatedAt       DateTime @default(now())
  UpdatedAt       DateTime @updatedAt

  RolePermissions RolePermissions[]
  Users           Users[]           @relation("RoleUsers")
  WFSteps         WFSteps[]         @relation("WFRole")
}

model Permissions {
  PermissionID String   @id @default(uuid())
  Code         String   @unique
  Module       String
  Name         String
  Description  String?
  CreatedAt    DateTime @default(now())

  RolePermissions RolePermissions[]
}

model RolePermissions {
  RoleID       String
  PermissionID String
  GrantedAt    DateTime @default(now())

  Role       Roles     @relation(fields: [RoleID], references: [RoleID], onDelete: Cascade)
  Permission Permissions @relation(fields: [PermissionID], references: [PermissionID], onDelete: Cascade)

  @@id([RoleID, PermissionID])
}

model DEP {
  DEPID      String   @id @default(uuid())
  Name       String
  Code       String   @unique
  ManagerID  String?  @unique
  CreatedAt  DateTime @default(now())
  UpdatedAt  DateTime @updatedAt

  Manager   Users? @relation("DEPLeader", fields: [ManagerID], references: [UserID], onDelete: NoAction, onUpdate: NoAction)
  FormPerms FormPermissions[]
}

model Users {
  UserID           String   @id @default(uuid())
  Name             String
  Email            String   @unique
  PasswordHash     String?
  AccountType      String   @default("AZURE_AD")
  RoleID           String  
  DEPID            String? 
  DirectManagerID  String? 
  IsActive         Boolean  @default(true)
  CreatedAt        DateTime @default(now())
  UpdatedAt        DateTime @updatedAt

  Role         Roles             @relation("RoleUsers", fields: [RoleID], references: [RoleID])
  Manager      Users?            @relation("UserManager", fields: [DirectManagerID], references: [UserID], onDelete: NoAction, onUpdate: NoAction)
  Subordinates Users[]           @relation("UserManager")
  ManagedDEP   DEP?              @relation("DEPLeader")
  GroupMembers GroupMembers[] @relation("GroupMemberUser")
  FormPerms    FormPermissions[] @relation("UserFormPerms")
  RequestsMade      Requests[]   @relation("ReqRequester")
  RequestsAssigned  Requests[]   @relation("ReqAssignee")
  RequestsPoCreated Requests[]   @relation("ReqPoCreator")
  WFSteps     WFSteps[]         @relation("WFUser")
  Approvals    RequestApprovals[]
  Comments     RequestComments[]
  Attachments  RequestAttachments[]
  AuditChanges RequestAuditLog[] @relation("AuditChangedBy")
  VerifiedItems RequestItems[] @relation("ItemVerifier")
  Notifications Notifications[] @relation("NotifUser")
}

model Groups {
  GroupID    String   @id @default(uuid())
  Name       String
  Description String?
  CreatedAt  DateTime @default(now())
  UpdatedAt  DateTime @updatedAt

  Members    GroupMembers[] @relation("GroupMemberGroup")
  FormPerms  FormPermissions[] @relation("GroupFormPerms")
  WFSteps    WFSteps[]         @relation("WFGroup")
}

model GroupMembers {
  GroupID  String
  UserID   String
  AddedAt  DateTime @default(now())

  GroupRef Groups @relation("GroupMemberGroup", fields: [GroupID], references: [GroupID], onDelete: NoAction, onUpdate: NoAction)
  UserRef  Users  @relation("GroupMemberUser", fields: [UserID], references: [UserID], onDelete: NoAction, onUpdate: NoAction)

  @@id([GroupID, UserID])
}

model FormCategories {
  FormCategoryID String   @id @default(uuid())
  Name           String
  SortOrder      Int      @default(0)
  CreatedAt      DateTime @default(now())
  UpdatedAt      DateTime @updatedAt

  Templates  FormTemplates[]
}

model WFDefinitions {
  WFDefinitionID String   @id @default(uuid())
  Name           String
  Description    String?
  Status         String   @default("ACTIVE")
  CreatedAt      DateTime @default(now())
  UpdatedAt      DateTime @updatedAt

  Templates  FormTemplates[]
  Steps      WFSteps[]
}

model FormTemplates {
  FormTemplateID   String   @id @default(uuid())
  Name             String
  Description      String?
  FormCategoryID   String? 
  WFDefinitionID   String? 
  Status           String   @default("DRAFT")
  Version          Int      @default(1)
  CreatedAt        DateTime @default(now())
  UpdatedAt        DateTime @updatedAt

  Category    FormCategories? @relation(fields: [FormCategoryID], references: [FormCategoryID], onDelete: SetNull)
  Workflow    WFDefinitions?  @relation(fields: [WFDefinitionID], references: [WFDefinitionID], onDelete: NoAction, onUpdate: NoAction)
  Fields      FormFields[]
  FormPerms   FormPermissions[] @relation("TemplateFormPerms")
  Requests    Requests[]
}

model FormPermissions {
  FormPermissionID String   @id @default(uuid())
  FormTemplateID   String  
  PermissionType   String
  DEPID            String? 
  GroupID          String? 
  UserID           String? 
  CreatedAt        DateTime @default(now())

  FormTemplate FormTemplates @relation("TemplateFormPerms", fields: [FormTemplateID], references: [FormTemplateID], onDelete: Cascade)
  DEP           DEP?          @relation(fields: [DEPID], references: [DEPID], onDelete: NoAction, onUpdate: NoAction)
  Group         Groups?       @relation("GroupFormPerms", fields: [GroupID], references: [GroupID], onDelete: NoAction, onUpdate: NoAction)
  User          Users?        @relation("UserFormPerms", fields: [UserID], references: [UserID], onDelete: NoAction, onUpdate: NoAction)
}

model FormFields {
  FormFieldID    String   @id @default(uuid())
  FormTemplateID String  
  Label          String
  FieldKey       String
  FieldType      String
  IsRequired     Boolean  @default(false)
  SortOrder      Int      @default(0)
  Config         String?
  CreatedAt      DateTime @default(now())
  UpdatedAt      DateTime @updatedAt

  FormTemplate    FormTemplates   @relation(fields: [FormTemplateID], references: [FormTemplateID], onDelete: Cascade)
  FieldValues     RequestFieldValues[]
  RequestItems    RequestItems[]
}

model WFSteps {
  WFStepID         String   @id @default(uuid())
  WFDefinitionID   String  
  StepName         String
  StepOrder        Int
  ApproverType     String
  TargetUserID     String? 
  TargetGroupID    String? 
  TargetRoleID     String? 
  ApprovalMode     String   @default("ANY_ONE")
  RejectAction     String   @default("REJECT_COMPLETELY")
  Condition        String?
  CreatedAt        DateTime @default(now())
  UpdatedAt        DateTime @updatedAt

  Workflow    WFDefinitions @relation(fields: [WFDefinitionID], references: [WFDefinitionID], onDelete: Cascade)
  TargetUser  Users?       @relation("WFUser", fields: [TargetUserID], references: [UserID], onDelete: NoAction, onUpdate: NoAction)
  TargetGroup Groups?      @relation("WFGroup", fields: [TargetGroupID], references: [GroupID], onDelete: NoAction, onUpdate: NoAction)
  TargetRole  Roles?       @relation("WFRole", fields: [TargetRoleID], references: [RoleID], onDelete: NoAction, onUpdate: NoAction)
  Requests    Requests[]
  Approvals   RequestApprovals[]
}

model ItemCatalogCache {
  ItemCatalogCacheID String   @id @default(uuid())
  OracleItemID       String   @unique
  ItemCode           String   @unique
  ItemName           String
  Description        String?
  Uom                String
  OrganizationCode   String
  LastPurchasedPrice Decimal? @db.Decimal(18, 4)
  FirstUsedAt        DateTime @default(now())
  LastUsedAt         DateTime @default(now())

  RequestItems RequestItems[]
}

model Requests {
  RequestID          String   @id @default(uuid())
  TrackingNumber     String   @unique
  Title              String?
  FormTemplateID     String  
  RequesterID        String  
  Status             String   @default("DRAFT")
  CurrentWFStepID    String? 
  FormSnapshot       String @db.Text
  Priority           String   @default("MEDIUM")
  AssigneeID         String? 
  FulfillmentType    String?
  StockIssueNumber   String?
  OraclePoNumber     String?
  PoCreatedByUserID  String? 
  PoCreatedAt        DateTime?
  PoNotes            String?
  SubmittedAt        DateTime?
  CompletedAt        DateTime?
  CreatedAt          DateTime @default(now())
  UpdatedAt          DateTime @updatedAt

  FormTemplate    FormTemplates    @relation(fields: [FormTemplateID], references: [FormTemplateID], onDelete: NoAction, onUpdate: NoAction)
  Requester       Users            @relation("ReqRequester", fields: [RequesterID], references: [UserID], onDelete: NoAction, onUpdate: NoAction)
  Assignee        Users?           @relation("ReqAssignee", fields: [AssigneeID], references: [UserID], onDelete: NoAction, onUpdate: NoAction)
  CurrentStep     WFSteps?         @relation(fields: [CurrentWFStepID], references: [WFStepID], onDelete: SetNull)
  PoCreator       Users?           @relation("ReqPoCreator", fields: [PoCreatedByUserID], references: [UserID], onDelete: NoAction, onUpdate: NoAction)
  Items           RequestItems[]
  FieldValues     RequestFieldValues[]
  Approvals       RequestApprovals[]
  Comments        RequestComments[]
  Attachments     RequestAttachments[]
  AuditLogs       RequestAuditLog[] @relation("AuditRequest")
  NotifRequests Notifications[] @relation("NotifRequest")
}

model RequestFieldValues {
  RequestFieldValueID String   @id @default(uuid())
  RequestID           String 
  FormFieldID         String?
  Value               String
  CreatedAt           DateTime @default(now())
  UpdatedAt           DateTime @updatedAt

  Request   Requests   @relation(fields: [RequestID], references: [RequestID], onDelete: Cascade)
  FormField FormFields? @relation(fields: [FormFieldID], references: [FormFieldID], onDelete: SetNull, onUpdate: SetNull)

  @@index([RequestID])
}

model RequestItems {
  RequestItemID            String   @id @default(uuid())
  RequestID               String 
  FormFieldID             String?
  RequestedItemName       String
  RequestedItemDetails    String?
  RequestedUom            String?
  RequestedQuantity       Decimal  @db.Decimal(18, 4)
  ItemCatalogCacheID      String? 
  OracleItemID            String?
  ItemCode                String?
  ItemName                String?
  Uom                     String?
  OrganizationCode        String?
  OnHandQuantity          Decimal? @db.Decimal(18, 4)
  ItemVerifiedByUserID    String? 
  ItemVerifiedAt          DateTime?
  IssuedFromStockQuantity Decimal  @db.Decimal(18, 4) @default(0)
  ToPurchaseQuantity      Decimal? @db.Decimal(18, 4)
  EstimatedPrice          Decimal? @db.Decimal(18, 4)
  StockDecisionNotes      String?
  CreatedAt               DateTime @default(now())
  UpdatedAt               DateTime @updatedAt

  Request     Requests         @relation(fields: [RequestID], references: [RequestID], onDelete: Cascade)
  FormField   FormFields?      @relation(fields: [FormFieldID], references: [FormFieldID], onDelete: SetNull, onUpdate: SetNull)
  ItemCatalog ItemCatalogCache? @relation(fields: [ItemCatalogCacheID], references: [ItemCatalogCacheID], onDelete: SetNull)
  Verifier    Users?           @relation("ItemVerifier", fields: [ItemVerifiedByUserID], references: [UserID], onDelete: NoAction, onUpdate: NoAction)
}

model RequestApprovals {
  RequestApprovalID String   @id @default(uuid())
  RequestID         String  
  WFStepID          String  
  ApproverUserID    String  
  Decision          String   @default("PENDING")
  Comment           String?
  DecidedAt         DateTime?
  CreatedAt         DateTime @default(now())

  Request  Requests @relation(fields: [RequestID], references: [RequestID], onDelete: Cascade)
  WFStep   WFSteps  @relation(fields: [WFStepID], references: [WFStepID], onDelete: NoAction, onUpdate: NoAction)
  Approver Users    @relation(fields: [ApproverUserID], references: [UserID], onDelete: NoAction, onUpdate: NoAction)
}

model RequestComments {
  RequestCommentID String   @id @default(uuid())
  RequestID        String  
  AuthorUserID     String  
  CommentText      String
  CommentType      String   @default("GENERAL")
  IsInternal       Boolean  @default(false)
  CreatedAt        DateTime @default(now())
  UpdatedAt        DateTime @updatedAt

  Request Requests @relation(fields: [RequestID], references: [RequestID], onDelete: Cascade)
  Author  Users    @relation(fields: [AuthorUserID], references: [UserID], onDelete: NoAction, onUpdate: NoAction)
}

model RequestAttachments {
  RequestAttachmentID String   @id @default(uuid())
  RequestID          String  
  UploadedByUserID   String  
  FileName           String
  FilePath           String
  MimeType           String
  FileSize           BigInt
  CreatedAt          DateTime @default(now())

  Request  Requests @relation(fields: [RequestID], references: [RequestID], onDelete: Cascade)
  Uploader Users    @relation(fields: [UploadedByUserID], references: [UserID], onDelete: NoAction, onUpdate: NoAction)
}

model Notifications {
  NotificationID    String   @id @default(uuid())
  UserID            String  
  Title             String
  Message           String
  Type              String
  RelatedRequestID  String? 
  IsRead            Boolean  @default(false)
  CreatedAt         DateTime @default(now())

  User     Users     @relation("NotifUser", fields: [UserID], references: [UserID], onDelete: Cascade)
  Request  Requests? @relation("NotifRequest", fields: [RelatedRequestID], references: [RequestID], onDelete: SetNull)
}

model RequestAuditLog {
  AuditLogID        String   @id @default(uuid())
  RequestID         String  
  ChangedByUserID   String? 
  FromStatus        String?
  ToStatus          String?
  Action            String?
  Note              String?
  CreatedAt         DateTime @default(now())

  Request   Requests @relation("AuditRequest", fields: [RequestID], references: [RequestID], onDelete: Cascade)
  ChangedBy Users?  @relation("AuditChangedBy", fields: [ChangedByUserID], references: [UserID], onDelete: SetNull)
}
